--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx-controllers:gdx-controllers-desktop:$gdxControllersVersion"
+        api "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.11.1"
         
     }
 }
@@ -71,6 +72,7 @@ project(":html") {
         api "com.badlogicgames.gdx-controllers:gdx-controllers-gwt:$gdxControllersVersion"
         api "com.badlogicgames.gdx-controllers:gdx-controllers-gwt:$gdxControllersVersion:sources"
         api "com.badlogicgames.ashley:ashley:$ashleyVersion:sources"
+        api "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.11.1"
         
     }
 }
@@ -84,6 +86,7 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
         api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
         api "com.badlogicgames.ashley:ashley:$ashleyVersion"
+        api "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.11.1"
         
     }
 }
